fix: scrollbar color (#412)
* fix: scrollbar color

* fix: color

--- a/src/renderer/css/mixins.less
+++ b/src/renderer/css/mixins.less
@@ -24,7 +24,7 @@
 
   &::-webkit-scrollbar-thumb {
     border-radius: 50px;
-    background-color: red;
+    background-color: #5D626F;
   }
 
   &::-webkit-scrollbar-track {
